welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:7: error: ';' expected but 'if' found.
  }if (nbBiscuits >= 3){
   ^